# docs/swagger.yaml
@@ -56,44 +56,72 @@ definitions:
     type: object
   system.SysUser:
     properties:
-      ID:
-        description: 主键ID
+      address:
+        type: string
+      appType:
         type: integer
-      authorityId:
-        description: 用户角色ID
+      auditStatus:
+        type: string
+      auditor:
         type: integer
-      createdAt:
-        description: 创建时间
+      createDate:
+        type: string
+      createID:
+        type: integer
+      creator:
+        type: string
+      dept_Id:
+        description: 用户登录密码
+        type: integer
+      deptIds:
+        type: string
+      deptName:
         type: string
       email:
-        description: 用户邮箱
         type: string
       enable:
-        description: 用户是否被冻结 1正常 2冻结
         type: integer
-      headerImg:
-        description: 用户头像
+      gender:
+        type: integer
+      headImageUrl:
         type: string
-      nickName:
-        description: 用户昵称
+      isRegregisterPhone:
+        type: integer
+      lastLoginDate:
         type: string
-      phone:
-        description: 用户手机号
+      lastModifyPwdDate:
         type: string
-      updatedAt:
-        description: 更新时间
+      mobile:
         type: string
+      modifier:
+        type: string
+      modifyDate:
+        type: string
+      modifyID:
+        type: integer
+      orderNo:
+        type: integer
+      phoneNo:
+        type: string
+      remark:
+        type: string
+      role_Ids:
+        type: string
+      roleName:
+        type: string
+      tel:
+        type: string
+      user_Id:
+        type: integer
       userName:
-        description: 用户登录名
         type: string
-      uuid:
-        description: 用户UUID
+      userTrueName:
         type: string
     type: object
 info:
   contact: {}
-  description: 使用gin快速开api脚手架
-  title: Gin-cli Swagger API接口文档
+  description: vol快速开发框架基于go语言gin框架实现
+  title: vol-gin-admin-api Swagger API接口文档
   version: v1.0.0
 paths:
   /acc/login:
