# model/basemodel.go
@@ -1,13 +1,11 @@
 package model
 
 import (
-	"gorm.io/gorm"
 	"time"
 )
 
 type BaseModel struct {
-	ID        uint64         `gorm:"primarykey" json:"ID"` // 主键ID
-	CreatedAt time.Time      // 创建时间
-	UpdatedAt time.Time      // 更新时间
-	DeletedAt gorm.DeletedAt `gorm:"index" json:"-"` // 删除时间
+	ID         uint64    `gorm:"primarykey" json:"ID"` // 主键ID
+	CreateDate time.Time // 创建时间
+	ModifyDate time.Time // 更新时间
 }
